cabal-version:        2.4
name:                 memorable-password-generator
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/johnsonwj/memorable-password-generator#readme
license:              GPL-3.0-or-later
license-file:         LICENSE
author:               Will Johnson
maintainer:           maintainer@willj.dev
copyright:            2019 Will Johnson
category:             Web
build-type:           Simple
extra-source-files:   README.md
data-files:           data/*.txt

common build-opts
  default-language:   Haskell2010
  default-extensions: OverloadedStrings, TupleSections, LambdaCase, DataKinds, FlexibleContexts, GADTs, PolyKinds,
                      RankNTypes, ScopedTypeVariables, TypeApplications, TypeOperators, TypeFamilies
  ghc-options:        -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -flate-specialise -fspecialise-aggressively


library
  import:             build-opts
  hs-source-dirs:     src
  build-depends:      base, text, polysemy, polysemy-plugin, random, array, megaparsec, parser-combinators
  exposed-modules:    MemorablePasswordGenerator, WordList
  other-modules:      Paths_memorable_password_generator
  ghc-options:        -fplugin=Polysemy.Plugin

executable memorable-password-generator
  import:             build-opts
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base, random, memorable-password-generator, text

test-suite spec
  import:             build-opts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base, memorable-password-generator, hspec
  other-modules:      Day01Spec

